# filewatchdog

./: .gitpod.yml  .readthedocs.yaml  LICENSE  README.md  README.rst  debug.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
docs/source/: conf.py  index.rst
filewatchdog/: __init__.py  breadcrumb.txt
test/: test.py  test_watchdog.py
test/test_folder/: 2.txt
