[tool.poetry]
name = "filewatchdog"
version = "0.1.7"
description = "Runs Python functions once a certain file is created or modified."
authors = ["BeginnerSC"]
license = "MIT"
readme = "README.md"

keywords = ["file monitoring", "automation", "python"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
packages = [{ include = "filewatchdog" }] 

[tool.poetry.dependencies]
python = ">=3.12"
schedule = "^1.2.1"

[tool.poetry.group.dev.dependencies]
Sphinx = "^7.2.6"
sphinx-copybutton = "^0.5.2"
sphinx-rtd-theme = "^2.0.0"
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
